# MitoOmics-GPU

./: .gitignore  README.md  pyproject.toml
bench/: bench_results.csv
example/: make_toy_data.py
mitoomics_gpu/: config.py  gpu_cli.py  scverse_api.py
mitoomics_gpu-20250925T104512Z-1-001/mitoomics_gpu/: __main__.py  ev_integration.py  gpu_backend.py  mhi.py  rapids_program_score.py
mitoomics_gpu/bench/: bench_results.json
mitoomics_gpu/data/: ev_whitelist.csv  genesets_curated.csv  mito_symbols.txt  mitocarta3_genes.txt  mitocarta3_table.compat.csv  mitocarta3_table.csv  scrna.mito_gene_detection.csv  scrna.mito_obs_cell_type_counts.csv  scrna.mito_obs_dataset_id_counts.csv  scrna.mito_obs_disease_counts.csv  scrna.mito_obs_donor_id_counts.csv  scrna.mito_obs_subject_id_counts.csv  scrna.mito_obs_tissue_general_counts.csv
mitoomics_gpu/docker/: Dockerfile.gpu
mitoomics_gpu/mitoomics_gpu/: PXD018301_files.json  __init__.py  cli.py  cli.py.bak  cli.py.bak2  dashboard.py  gene_sets.py  gpu_accel.py  io.py  report.py  scoring.py  scverse_api.py.bak
mitoomics_gpu/mitoomics_gpu/bench/: benchmark_mhi.py
results_breast/: results_summary.csv  results_summary_with_disease.csv  results_summary_with_ff.csv
results_breast-20250925T104515Z-1-001/results_breast/: report.md
tools/: bench_cpu_gpu.py  fix_scrna_varnames.py  grab_scrna_census_by_genelist_fast.py
tools-20250925T104518Z-1-001/tools/: extract_mito_from_mitopathways.py  extract_mito_gene_list.py  fix_mitocarta_headers.py  grab_scrna_census_by_genelist.py  grab_scrna_census_mito_auto.py
(+8 files in other folders)
