[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "mitoomics-gpu"
version = "0.1.1"
description = "GPU-accelerated pipeline to compute a Mitochondrial Health Index (MHI)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "anndata>=0.10",
  "scanpy>=1.9",
]

[tool.setuptools.packages.find]
where = ["."]
